traefik/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: middleware
spec:
  basicAuth:
    secret: basic-auth-secret
